--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.sql.init.platform= postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/BackDulce
+spring.datasource.url = jdbc:postgresql://localhost:5432/BackendDulceria
 spring.datasource.username = postgres
 spring.datasource.password = 1234
 # spring.jpa.show-sql= true
